# bazbandilo

./: .gitignore  Cargo.toml  README.md  justfile  pyproject.toml  shell.nix
bazbandilo/: __init__.py
final/: gen_graphs.sh  paper_graphs.sh
final/graphs/: clear.sh  cp.sh
pitono/: ber.py  bers.py  bers_grouped.py  cfar.py  cfar_grouped.py  cfar_pfa_multi.py  coo.py  foo.py  gain_difference.py  gcoo.py  goo.py  pdfs.py  plot.py  roc.py  ssca.py  tw.py  youden_j.py  youden_j_grouped.py
src/: barker.rs  bch.rs  bpsk.rs  cdma.rs  csk.rs  css.rs  dcsk.rs  fam.rs  fh.rs  fh_ofdm_dcsk.rs  fsk.rs  iq_mod.rs  lib.rs  ofdm.rs  psk.rs  qam.rs  qpsk.rs  ssca.rs
src/iter/: chunks.rs  inflate.rs  integrate.rs  mod.rs  scale.rs  take_every.rs
tests/: asdf.rs  ber.rs  bpsk.rs  cdma.rs  eb.rs  fft.rs  fh_ofdm_dcsk.rs  normtest.rs  ofdm.rs  pd.rs  pd_barker.rs  pd_inflated64.rs  pd_normal.rs  ser.rs  tw.rs  willie.rs
tests/util/: ber.rs  mod.rs
