[project]
name = "bazbandilo"
version = "1.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "matplotlib>=3.10.0",
  "numpy>=2.2.3",
  "pandas>=2.2.3",
  "scikit-learn>=1.6.1",
  "scipy>=1.15.2",
  "tqdm>=4.67.1",
]

[dependency-groups]
build = ["maturin>=1.8.2"]
dev = ["jupyter>=1.1.1"]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
